auto resize && fix camera invalid style on mobile viewport

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   height: 100%;
   overflow: hidden;
@@ -8,7 +9,7 @@ html, body {
 #background {
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
-  width: 390px;
-  height: 844px;
+  right: 0;
 }
